<resources>
    <string name="app_name">EduForum</string>
    <string name="passChangedText">Mật khẩu của bạn đã được thay đổi thành công.</string>
    <string name="accCreatedText">Tài khoản của bạn đã được tạo thành công.</string>
    <string name="forgotPassHeadingText">Quên mật khẩu?</string>
    <string name="forgotPassText">Đừng lo! Nó thường xuyên xảy ra. Hãy nhập địa chỉ email liên kết với tài khoản của bạn.</string>
    <string name="createNewPassHeadingText">Tạo mật khẩu mới</string>
    <string name="createNewPassText">Mật khẩu mới của bạn phải khác với những mật khẩu đã dùng trước đó.</string>

    <!-- thiết lập string cho welcome -->
    <string name="screen0">Chào mừng tới</string>
    <string name="screen1">Kết nối</string>
    <string name="screen2">Chia sẻ</string>
    <string name="screen3">Học hỏi</string>
    <string name="desscreen0">Kết nối, Chia sẻ, Học hỏi</string>
    <string name="desscreen1">Trò chuyện và kết bạn với hàng nghìn sinh viên khác trên EduForum. Tìm kiếm những người có cùng sở thích và tương tác mạnh mẽ với cộng đồng đa dạng của chúng tôi.</string>
    <string name="desscreen2">Chia sẻ bài viết, hình ảnh, video và ý tưởng với cộng đồng sinh viên toàn cầu. Dễ dàng tạo nội dung mới và thảo luận với mọi người.</string>
    <string name="desscreen3">Khám phá hàng trăm chủ đề khác nhau,  hỏi và trả lời từ những người bạn mới. EduForum là nguồn tài nguyên không giới hạn cho sự học tập và phát triển cá nhân.</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--    string cho login/ sign_up -->
    <string name="LoginTitle">Đăng nhập</string>
    <string name="loginDescription">Đăng nhập bằng tài khoản của bạn</string>
    <string name="Emailaddress">Địa chỉ email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="login_btn">Đăng nhập</string>
    <string name="register">Chưa có tài khoản?</string>
    <string name="dangky">Đăng ký ngay</string>
    <string name="taotk">Tạo tài khoản mới</string>
    <string name="name">Họ và tên</string>
    <string name="confirmPass">Xác nhận mật khẩu</string>
    <string name="Dang_ky">Đăng ký</string>
    <string name="khoa">Khoa</string>
    <string name="gioiTinh">Giới tính</string>
    <string name="nienKhoa">Niên Khóa</string>
    <string name="SDT">Số điện thoại</string>
    <string name="confirm_otp">Xác thực OTP</string>
    <string name="otp_guideline">Nhập mã xác thực mà chúng tôi vừa gửi vào địa chỉ email của bạn</string>
    <string-array name="ds_khoa">
        <item>Khoa học Máy tính</item>
        <item>Công nghệ Phần mềm</item>
        <item>Hệ thống thông tin</item>
        <item>Kỹ thuật máy tính</item>
        <item>Truyền thông và Mạng máy tính</item>
        <item>Khoa học và Kĩ thuật Thông tin</item>
    </string-array>
    <string-array name="gioiTinh">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Other</item>
    </string-array>
    <string name="homeFragmentTitle">DANH SÁCH FORUM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back_to_login">Trở lại đăng nhập</string>
    <string name="verification_waiting_title1">Đăng ký thành công</string>
    <string name="verification_waiting_title2">Xác nhận Email thành công</string>
    <string name="verification_waiting_content1">Hãy kiểm tra hòm thư của bạn để kích hoạt tài khoản!</string>
    <string name="verification_waiting_content2">Hãy kiểm tra hòm thư của bạn để tiến hành xác thực và đặt lại mật khẩu!</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="community_name">Tên cộng đồng (*)</string>
    <string name="community_description">Mô tả cộng đồng</string>
    <string name="community_category">Phân loại</string>
    <string name="choose_from_device">Chọn hình ảnh từ thiết bị</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="confirm">Xác nhận</string>
    <string name="join">Tham gia</string>
    <string name="create_community">Tạo mới</string>
    <string name="create_community_title">Tạo cộng đồng mới</string>
    <string name="join_community_title">Tham gia cộng đồng</string>
    <string name="community_id">Mã cộng đồng (*)</string>
    <string name="community_title">
Nh\u00e1\u00ba\u00adp m\u00c3\u00b4n l\u00e1\u00ba\u00adp tr\u00c3\u00acnh\n500 th\u00c3\u00a0nh vi\u00c3\u00aan 12 b\u00c3\u00a0i vi\u00e1\u00ba\u00bft
</string>
    <string name="category_activity_create_post">Danh mục</string>
    <string name="categoryhint_activity_create_post">Hãy chọn các danh mục phân loại</string>
    <string name="title_activity_create_post">Tiêu đề</string>
    <string name="titlehint_activity_create_post">Hãy nhập tiêu đề bài viết</string>
    <string name="content_activity_create_post">Nội dung</string>
    <string name="contenthint_activity_create_post">Hãy nhập nội dung bài viết</string>
    <string name="reply_comment">Phản hồi</string>
    <string name="showReply_comment">Hiển thị các phản hồi</string>


</resources>