<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.eduforum.activity.viewmodel.auth.LoginViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ui.auth.LoginActivity"
        android:background="@color/backgroundColor"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/eduforumlogo"
                app:layout_constraintDimensionRatio="2:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/ng_nh_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="26dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="86dp"
            android:text="@string/LoginTitle"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:gravity="top"
            android:lineHeight="33sp"
            />
        <TextView
            android:id="@+id/ng_nh_p_b_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="26dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="130dp"
            android:text="@string/loginDescription"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:gravity="top"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:lineHeight="26sp"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:id="@+id/TIL_Email"
            android:hint="@string/Emailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/loginedittextshape"
            android:layout_marginTop="210dp"
            app:suffixTextColor="@color/primaryColor"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewModel.credentials.email}"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="310dp"

            android:hint="@string/password"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primaryColor"
            app:passwordToggleTintMode="src_in">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewModel.credentials.password}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="224dp"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="379dp"
            android:background="@drawable/transparent_btn"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:gravity="top"
            android:text="@string/forgot_pass"
            android:textColor="#B0B0B0"
            android:textSize="13sp" />

        <Button
            android:onClick="@{() -> viewModel.onLoginClicked()}"
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:text="@string/login_btn"
            android:layout_marginTop="450dp"
            android:layout_marginHorizontal="26dp"
            android:layout_centerInParent="true"
            android:background="@drawable/login_btn"
            android:foreground="?attr/selectableItemBackground"
            />
        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="123dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="570dp"
            android:text="@string/register"
            android:textSize="15sp"
            android:textColor="#B0B0B0"
            android:lineSpacingExtra="2sp"
            android:translationY="-1.07sp"
            android:gravity="center_horizontal|top"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="575dp"
            android:background="@drawable/transparent_btn"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/dangky"
            android:textColor="#0097FB"
            />


    </RelativeLayout>
</layout>
