<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.eduforum.activity.viewmodel.main.HomeViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/secondaryColor"
            android:padding="16dp"
            android:gravity="center">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              >
                <TextView
                    android:id="@+id/createCommunityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_community_title"
                    android:textSize="24sp"
                    android:textColor="@color/textColor"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <ImageView
                    android:id="@+id/communityImage"
                    android:layout_height="140dp"
                    android:layout_width="140dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/createCommunityTitle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_launcher_background" />

                <Button
                    android:id="@+id/uploadImageButton"
                    android:background="@drawable/loginbuttonshape"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/communityImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="160dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/choose_from_device" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/communityNameInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/communityNameEditText"
                    android:hint="@string/community_name"
                    android:text="@={viewModel.commuLiveData.name}"
                    android:layout_width="match_parent"
                    android:layout_height="54dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginTop="8dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:hint="@string/community_description"
                    android:text="@={viewModel.commuLiveData.description}"
                    android:layout_width="match_parent"
                    android:layout_height="54dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:id="@+id/tagInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginTop="8dp"
                >
                <AutoCompleteTextView
                    android:id="@+id/categoryACTV"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:paddingLeft="16dp"
                    android:hint="@string/community_category"
                    android:inputType="none"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="end"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/cancelCreateCommunityButton"
                    android:background="@drawable/loginbuttonshape"
                    android:onClick="@{() -> viewModel.onCancelCreateCommunityButtonClicked()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />
                <Button
                    android:id="@+id/confirmCreateCommunityButton"
                    android:onClick="@{() -> viewModel.onConfirmCreateCommunityButtonClicked()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/loginbuttonshape"
                    android:text="@string/confirm" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
