<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<!--    <data>-->
<!--        <variable-->
<!--            name="viewModel"-->
<!--            type="com.example.eduforum.activity.viewmodel.auth.LoginViewModel" />-->
<!--    </data>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ui.auth.ForgotPassActivity"
        android:background="@color/backgroundColor">

        <TextView
            android:id="@+id/forgotPassHeadingTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:text="@string/forgotPassHeadingText"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forgotPassTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:text="@string/forgotPassText"
            android:textColor="@color/subTitleTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassHeadingTextview" />
        
        <ImageView
            android:id="@+id/forgotPassImageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/undraw_forgot_password_re_hxwm"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotPassTextview"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginVertical="5dp"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:id="@+id/forgotPassEmailTIL"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/Emailaddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassImageView">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgotPassEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/loginedittextshape"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendCodeButton"
            android:background="@drawable/loginedittextshape"
            android:text="Gửi mã"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassEmailTIL" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
